--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="Default">
+<!-- <html lang="Default"> -->
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
@@ -19,7 +20,8 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-    <title>.</title>
+    <!-- <title>.</title> -->
+	<title>La chouette agence</title>
 
     
 <!-- Analytics -->
