--- a/index.html
+++ b/index.html
@@ -3,23 +3,18 @@
 <html lang="fr">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="keywords"
-		content="seo, google, site web, site internet, agence design paris, agence design">
-	<meta name="description"
-		content="Agence web à Lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site">
 	<!--*-->
+	<meta charset="utf-8">
+	<meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design">
+	<meta name="description" content="Agence web à Lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
+	<meta name="robots" content="index, follow">
 
+	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-
-	<!-- <link rel="canonical" href="https://monsite.com/page" /> -->
-
-	<code><meta name="robots" content="index, follow"></code>
 
 	<script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/bootstrap.js"></script>
@@ -27,10 +22,8 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-	<!-- <title>.</title> -->
+	<!--*-->
 	<title>La chouette agence</title>
-
-
 	<!-- Analytics -->
 
 	<!-- Analytics END -->
@@ -38,21 +31,23 @@
 </head>
 
 <body>
+	
 	<!-- Principal conteneur -->
 	<div class="page-container">
-
+	<header>
 		<!-- bloc-0 -->
 		<div class="bloc bgc-white l-bloc " id="bloc-0">
 			<div class="container bloc-sm">
 
 				<nav class="navbar row">
 					<div class="navbar-header">
-						<!-- <div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div> -->
-						<a class="navbar-brand" href="index.html"><img src="./img/la-chouette-agence.png"
+
+						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
 								alt="paris web design logo agence web meilleure agence" height="40" /></a>
-						<!-- <div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div> -->
+
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
+
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
 								class="icon-bar"></span><span class="icon-bar"></span>
 						</button>
@@ -62,7 +57,7 @@
 							<li>
 								<a href="index.html">Accueil</a>
 							</li>
-							
+
 							<li>
 								<a href="page2.html">Contact</a>
 							</li>
@@ -73,21 +68,23 @@
 		</div>
 		<!-- bloc-0 END -->
 
+	</header>
+	<main>
 		<!-- bloc-1-presentation -->
 		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
 			id="bloc-1-hero">
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
-						<img src="/img/logo.png" class="center-block image-resize-mode" width="100" height=""
+						<img src="img/logo.png" class="center-block image-resize-mode" width="100" height="100"
 							alt="La chouette agence, agence web paris, création logo paris" />
 						<h1 class="text-center hero-bloc-text tc-white ">
 							La chouette agence.
 						</h1>
-						<div class="text-center">
-							<!-- <a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
-								id="cta-hero">Contact</a> -->
-						</div>
+						<!-- <div class="text-center">
+							<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
+								id="cta-hero">Contact</a>
+						</div> -->
 					</div>
 				</div>
 			</div>
@@ -145,7 +142,8 @@
 				<div class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 						<!-- <img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" /> -->
-						<h2>"La chouette agence est une excellente agence web ! <br>Les web designers on réussi à capturer
+						<h2>"La chouette agence est une excellente agence web ! <br>Les web designers on réussi à
+							capturer
 							l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos
 							ventes en ligne à Lyon."<br>
 							Maxime Guibard, PDG de à vos fouchettes</h2>
@@ -264,7 +262,8 @@
 			</div>
 		</div>
 		<!-- bloc-5-cta END -->
-
+	</main>
+	<footer>
 		<!-- Footer - bloc-8 -->
 		<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 			<div class="container bloc-sm">
@@ -342,10 +341,10 @@
 			</div>
 		</div>
 		<!-- Footer - bloc-8 END -->
-
+	
 	</div>
 	<!-- Principal conteneur END -->
-
+</footer>
 
 </body>
 
