--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/livres_couleurs.jpg" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
-								src="img/1.jpg"
+								src="img/livres_couleurs.jpg"
 								alt="paris web design logo agence web meilleure agence et refonte site web journal"
 								class="img-responsive portfolio-thumb" /></a>
 						<h3 class="mg-md text-center">
@@ -203,9 +203,9 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/femme_photographie.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
-								src="img/2.jpg" class="img-responsive portfolio-thumb"
+								src="img/femme_photographie.jpg" class="img-responsive portfolio-thumb"
 								alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
@@ -217,9 +217,9 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/setup_appareil_photo.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
-								src="img/3.bmp" class="img-responsive portfolio-thumb"
+								src="img/setup_appareil_photo.jpg" class="img-responsive portfolio-thumb"
 								alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
@@ -230,9 +230,9 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/table_travail.jpg" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
-								src="img/4.bmp" class="img-responsive portfolio-thumb"
+								src="img/table_travail.jpg" class="img-responsive portfolio-thumb"
 								alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
