--- a/page2.html
+++ b/page2.html
@@ -8,8 +8,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/style.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
@@ -30,6 +30,7 @@
 
 <body>
 	<!-- Principal conteneur -->
+<header>
 	<div class="page-container">
 
 		<!-- bloc-0 -->
@@ -50,18 +51,15 @@
 							<li>
 								<a href="index.html">Accueil</a>
 							</li>
-						
-							<!-- <li>
-								<a href="page2.html">page2</a>
-							</li> -->
 						</ul>
 					</div>
 				</nav>
 			</div>
 		</div>
 		<!-- bloc-0 END -->
-
+</header>
 		<!-- bloc-6 -->
+<main>
 		<div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
 			<div class="container bloc-lg">
 				<div class="row">
@@ -132,7 +130,9 @@
 		<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span
 				class="fa fa-chevron-up"></span></a>
 		<!-- ScrollToTop Button END-->
+</main>
 
+<footer>
 
 		<!-- Footer - bloc-8 -->
 		<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
@@ -173,7 +173,7 @@
 
 	</div>
 	<!-- Principal conteneur END -->
-
+</footer>
 
 </body>
 
