--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/livres_couleurs.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/livres_couleurs.webp" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
-								src="img/livres_couleurs.jpg"
+								src="/img/1.webp"
 								alt="paris web design logo agence web meilleure agence et refonte site web journal"
 								class="img-responsive portfolio-thumb" /></a>
 						<h3 class="mg-md text-center">
@@ -205,9 +205,9 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/femme_photographie.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/femme_photographie.webp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
-								src="img/femme_photographie.jpg" class="img-responsive portfolio-thumb"
+								src="/img/femme_photographie.webp" class="img-responsive portfolio-thumb"
 								alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
@@ -219,9 +219,9 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/setup_appareil_photo.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/setup_appareil_photo.webp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
-								src="img/setup_appareil_photo.jpg" class="img-responsive portfolio-thumb"
+								src="/img/setup_appareil_photo.webp" class="img-responsive portfolio-thumb"
 								alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
@@ -232,9 +232,9 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/table_travail.jpg" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/table_travail.webp" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
-								src="img/table_travail.jpg" class="img-responsive portfolio-thumb"
+								src="/img/table_travail.webp" class="img-responsive portfolio-thumb"
 								alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
