--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<nav class="navbar row">
 						<div class="navbar-header">
 
-							<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
+							<a class="navbar-brand" href="index.html"><img src="/img/la-chouette-agence.webp"
 									alt="paris web design logo agence web meilleure agence" height="40" /></a>
 
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
@@ -77,7 +77,7 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
-						<img src="img/logo.png" class="center-block image-resize-mode" width="100" height="100"
+						<img src="/img/logo.webp" class="center-block image-resize-mode" width="100" height="100"
 							alt="La chouette agence, agence web paris, création logo paris" />
 						<h1 class="text-center hero-bloc-text tc-white ">
 							La chouette agence.
