--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<!--*-->
 	<title>La chouette agence</title>
 	<!-- Analytics -->
-
+	
 	<!-- Analytics END -->
 
 </head>
@@ -194,7 +194,7 @@
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/livres_couleurs.webp" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
-								src="/img/1.webp"
+								src="/img/livre_en_couleur.webp"
 								alt="paris web design logo agence web meilleure agence et refonte site web journal"
 								class="img-responsive portfolio-thumb" /></a>
 						<h3 class="mg-md text-center">
