--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<!--*-->
 	<title>La chouette agence</title>
 	<!-- Analytics -->
-	
+
 	<!-- Analytics END -->
 
 </head>
@@ -264,6 +264,12 @@
 			</div>
 		</div>
 		<!-- bloc-5-cta END -->
+
+		<!-- ScrollToTop Button -->
+		<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span
+				class="fa fa-chevron-up"></span></a>
+		<!-- ScrollToTop Button END-->
+
 	</main>
 	<footer>
 		<!-- Footer - bloc-8 -->
@@ -277,35 +283,35 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="#"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" href="#" aria-label="Twitter">
+										<span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="#" aria-label="Facebook"><span
-											class="fa fa-facebook icon-md"></span></a>
+									<a class="social" href="#" aria-label="Facebook">
+										<span class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
+
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="#"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" href="#" aria-label="Dribbble">
+										<span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
+
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="#"><span class="fa fa-instagram icon-md"></span></a>
+									<a class="social" href="#" aria-label="Instagram">
+										<span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
-							<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design,
-								illustrations, design de site web, site web, web, internet, site internet, site</div>
 						</div>
-						
 					</div>
 				</div>
 			</div>
-		</div>
-		<!-- Footer - bloc-8 END -->
-
+			<!-- Footer - bloc-8 END -->
 		</div>
 		<!-- Principal conteneur END -->
 	</footer>
