--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<nav class="navbar row">
 						<div class="navbar-header">
 
-							<a class="navbar-brand" href="index.html"><img src="../img/la-chouette-agence.webp"
+							<a class="navbar-brand" href="index.html"><img src="/img/la-chouette-agence.webp"
 									alt="paris web design logo agence web meilleure agence" height="40" /></a>
 
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
