remplacement paris/lyon

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<div class="navbar-header">
 
 							<a class="navbar-brand" href="index.html"><img src="/img/la-chouette-agence.png"
-									alt="paris web design logo agence web meilleure agence" height="40" /></a>
+									alt="Lyon web design logo agence web meilleure agence" height="40" /></a>
 
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 								data-toggle="collapse" data-target=".navbar-1">
@@ -78,14 +78,10 @@
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
 						<img src="/img/logo.png" class="center-block image-resize-mode" width="100" height="100"
-							alt="La chouette agence, agence web paris, création logo paris" />
+							alt="La chouette agence, agence web Lyon, création logo Lyon" />
 						<h1 class="text-center hero-bloc-text tc-white ">
 							La chouette agence.
 						</h1>
-						<!-- <div class="text-center">
-							<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
-								id="cta-hero">Contact</a>
-						</div> -->
 					</div>
 				</div>
 			</div>
@@ -97,7 +93,6 @@
 			<div class="container bloc-md d-flex d-sm-block">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<!-- <img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" /> -->
 						<h2>La chouette agence est une agence de web design qui aide<br> les entreprises à devenir
 							attractives et visibles sur internet.</h2>
 					</div>
@@ -184,7 +179,6 @@
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<!-- <img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" /> -->
 						<p class="text-center">
 							Nous travaillons avec beaucoup de clients, voici nos réalisations
 						</p>
@@ -195,7 +189,7 @@
 						<a href="#" data-lightbox="img/livres_couleurs.webp" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
 								src="/img/livre_en_couleur.webp"
-								alt="paris web design logo agence web meilleure agence et refonte site web journal"
+								alt="Lyon web design logo agence web meilleure agence et refonte site web journal"
 								class="img-responsive portfolio-thumb" /></a>
 						<h3 class="mg-md text-center">
 							Refonte d'un site web pour un journal local
@@ -208,7 +202,7 @@
 						<a href="#" data-lightbox="img/femme_photographie.webp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
 								src="/img/femme_photographie.webp" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+								alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
 						</h3>
@@ -222,7 +216,7 @@
 						<a href="#" data-lightbox="img/setup_appareil_photo.webp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
 								src="/img/setup_appareil_photo.webp" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
+								alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
 						</h3>
@@ -235,7 +229,7 @@
 						<a href="#" data-lightbox="img/table_travail.webp" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
 								src="/img/table_travail.webp" class="img-responsive portfolio-thumb"
-								alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+								alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
 						</h3>
