--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
 
-	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
+	<link rel="shortcut icon" type="image/png" href="/img/favicon.jpg">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
@@ -32,10 +32,10 @@
 </head>
 
 <body>
-	<header>
+	
 		<!-- Principal conteneur -->
-		<div class="page-container">
-
+<div class="page-container">
+	<header>
 			<!-- bloc-0 -->
 			<div class="bloc bgc-white l-bloc " id="bloc-0">
 				<div class="container bloc-sm">
@@ -309,7 +309,7 @@
 		</div>
 		<!-- Principal conteneur END -->
 	</footer>
-
+</div>
 </body>
 
 </html>
