--- a/page2.html
+++ b/page2.html
@@ -30,9 +30,8 @@
 
 <body>
 	<!-- Principal conteneur -->
-<header>
-	<div class="page-container">
-
+<div class="page-container">
+	<header>
 		<!-- bloc-0 -->
 		<div class="bloc bgc-white l-bloc " id="bloc-0">
 			<div class="container bloc-sm">
@@ -57,9 +56,9 @@
 			</div>
 		</div>
 		<!-- bloc-0 END -->
-</header>
+	</header>
 		<!-- bloc-6 -->
-<main>
+	<main>
 		<div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
 			<div class="container bloc-lg">
 				<div class="row">
@@ -82,8 +81,8 @@
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-6">
-						<form id="form_1" novalidate success-msg="Your message has been sent."
-							fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+						<form id="form_1"> <!-- novalidate success-msg="Votre message a été envoyé."
+							fail-msg="Désolé, il semble que notre serveur de messagerie ne réponde pas, désolé pour le désagrément!" -->
 							<div class="form-group">
 								<label>
 									Nom
@@ -130,9 +129,9 @@
 		<!-- <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span
 				class="fa fa-chevron-up"></span></a> -->
 		<!-- ScrollToTop Button END-->
-</main>
+	</main>
 
-<footer>
+	<footer>
 
 		<!-- Footer - bloc-8 -->
 		<div class="bloc bgc-atomic-tangerine d-bloc footer-bloc" id="bloc-8">
@@ -171,10 +170,10 @@
 		</div>
 		<!-- Footer - bloc-8 END -->
 
-	</div>
+	
 	<!-- Principal conteneur END -->
-</footer>
-
+	</footer>
+</div>
 </body>
 
 </html>
