--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
 	<!--*-->
-	<title>La chouette agence</title>
+	<title>La chouette agencee</title>
 	<!-- Analytics -->
 
 	<!-- Analytics END -->
