--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
 	<!--*-->
-	<title>La chouette agencee</title>
+	<title>La chouette agence</title>
 	<!-- Analytics -->
 
 	<!-- Analytics END -->
@@ -43,7 +43,7 @@
 					<nav class="navbar row">
 						<div class="navbar-header">
 
-							<a class="navbar-brand" href="index.html"><img src="/img/la-chouette-agence.png"
+							<a class="navbar-brand" href="index.html"><img src="./img/la-chouette-agence.png"
 									alt="Lyon web design logo agence web meilleure agence" height="40" /></a>
 
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
