--- a/page2.html
+++ b/page2.html
@@ -131,10 +131,10 @@
 		<!-- ScrollToTop Button END-->
 	</main>
 
-	<footer>
+	<footer class="bloc bgc-atomic-tangerine d-bloc footer-bloc" id="bloc-8">
 
 		<!-- Footer - bloc-8 -->
-		<div class="bloc bgc-atomic-tangerine d-bloc footer-bloc" id="bloc-8">
+		
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
@@ -167,7 +167,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		
 		<!-- Footer - bloc-8 END -->
 
 	
