--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
-						<img src="/img/logo.png" class="center-block image-resize-mode" width="100" height="100"
+						<img src="./img/logo.png" class="center-block image-resize-mode" width="100" height="100"
 							alt="La chouette agence, agence web Lyon, création logo Lyon" />
 						<h1 class="text-center hero-bloc-text tc-white ">
 							La chouette agence.
@@ -188,7 +188,7 @@
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/livres_couleurs.webp" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
-								src="/img/livre_en_couleur.webp"
+								src="./img/livre_en_couleur.webp"
 								alt="Lyon web design logo agence web meilleure agence et refonte site web journal"
 								class="img-responsive portfolio-thumb" /></a>
 						<h3 class="mg-md text-center">
@@ -201,7 +201,7 @@
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/femme_photographie.webp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
-								src="/img/femme_photographie.webp" class="img-responsive portfolio-thumb"
+								src="./img/femme_photographie.webp" class="img-responsive portfolio-thumb"
 								alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
@@ -215,7 +215,7 @@
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/setup_appareil_photo.webp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
-								src="/img/setup_appareil_photo.webp" class="img-responsive portfolio-thumb"
+								src="./img/setup_appareil_photo.webp" class="img-responsive portfolio-thumb"
 								alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
@@ -228,7 +228,7 @@
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/table_travail.webp" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
-								src="/img/table_travail.webp" class="img-responsive portfolio-thumb"
+								src="./img/table_travail.webp" class="img-responsive portfolio-thumb"
 								alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
