--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
-						<img src="./img/logo.png" class="center-block image-resize-mode" width="100" height="100"
+						<img src="./img/logo.png" class="center-block image-resize-mode"  height="100"
 							alt="La chouette agence, agence web Lyon, création logo Lyon" />
 						<h1 class="text-center hero-bloc-text tc-white ">
 							La chouette agence.
@@ -190,7 +190,7 @@
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
 								src="./img/livre_en_couleur.webp"
 								alt="Lyon web design logo agence web meilleure agence et refonte site web journal"
-								class="img-responsive portfolio-thumb" /></a>
+								class="img-responsive portfolio-thumb" height="320"/></a>
 						<h3 class="mg-md text-center">
 							Refonte d'un site web pour un journal local
 						</h3>
@@ -202,7 +202,7 @@
 						<a href="#" data-lightbox="img/femme_photographie.webp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
 								src="./img/femme_photographie.webp" class="img-responsive portfolio-thumb"
-								alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+								alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour photographes" height="320"/></a>
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
 						</h3>
@@ -216,7 +216,7 @@
 						<a href="#" data-lightbox="img/setup_appareil_photo.webp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
 								src="./img/setup_appareil_photo.webp" class="img-responsive portfolio-thumb"
-								alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour voyageur" /></a>
+								alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour voyageur" height="320"/></a>
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
 						</h3>
@@ -229,7 +229,7 @@
 						<a href="#" data-lightbox="img/table_travail.webp" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
 								src="./img/table_travail.webp" class="img-responsive portfolio-thumb"
-								alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+								alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" height="320"/></a>
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
 						</h3>
