--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		content="Agence web à Lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
+	<meta name="theme-color" content="#4285f4">
 
 	<link rel="shortcut icon" type="image/png" href="/img/favicon.jpg">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
