--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta name="robots" content="index, follow">
 	<meta name="theme-color" content="#4285f4">
 
-	<link rel="shortcut icon" type="image/png" href="/img/favicon.jpg">
+	<link rel="shortcut icon" type="image/png" href="./img/favicon.jpg">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
