--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/livres_couleurs.webp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="./img/livre_en_couleur.webp" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
 								src="./img/livre_en_couleur.webp"
 								alt="Lyon web design logo agence web meilleure agence et refonte site web journal"
@@ -200,7 +200,7 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/femme_photographie.webp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="./img/femme_photographie.webp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
 								src="./img/femme_photographie.webp" class="img-responsive portfolio-thumb"
 								alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour photographes" height="320"/></a>
@@ -214,7 +214,7 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/setup_appareil_photo.webp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="./img/setup_appareil_photo.webp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
 								src="./img/setup_appareil_photo.webp" class="img-responsive portfolio-thumb"
 								alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour voyageur" height="320"/></a>
@@ -227,7 +227,7 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/table_travail.webp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="./img/table_travail.webp" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
 								src="./img/table_travail.webp" class="img-responsive portfolio-thumb"
 								alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" height="320"/></a>
